[package]
name = "tower-kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.3"
futures = "0.3"
kafka-protocol = { git = "https://github.com/tychedelia/kafka-protocol-rs" }
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-tower = "0.7.0-rc3"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2"