[package]
name = "tower-kafka"
version = "0.0.1"
edition = "2021"
authors = [
    "Charlotte McElwain <charlotte.c.mcelwain@gmail.com>",
]
license = "MIT/Apache-2.0"
description = "Tower service for Apache Kafka"
homepage = "https://github.com/tychedelia/tower-kafka"
repository = "https://github.com/tychedelia/tower-kafka"
documentation = "https://docs.rs/tower-kafka"
readme = "README.md"
keywords = ["kafka"]

[dependencies]
bytes = "1.3"
futures = "0.3"
kafka-protocol = "0.4"
thiserror = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-tower = "0.7.0-rc3"
tokio-util = { version = "0.7", features = ["codec", "compat"] }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
tracing-test = "0.2"